Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76927

[REG 5.12.3 -> 5.12.4] QWebEngineView heavily flickers when resizing on macOS

    XMLWordPrintable

Details

    • macOS

    Description

      Description

      When resizing a window containing a QWebEngineView, the QWebEngineView is heavily flickering, especially on macOS. This issue does not occur with Qt 5.12.3.

       

      Reproducibility

      • This issue is reproducible with Qt 5.13.0 on macOS 10.14.5
      • This issue does not occur with Qt 5.12.3 on macOS 10.14.5

       

      Steps to reproduce

      • Download the attached TestResizing project
      • Compile an run on macOS 10.14.5 with Qt 5.13.0
      • Resize the window

      Result: The QWebEngineView heavily flickers when resizing the window.

      Please see attached video made with Qt 5.13.0 and Qt 5.12.3 to see the differences.

      Attachments

        1. 5.12.3.mov
          3.05 MB
        2. 5.13.0.mov
          5.30 MB
        3. TestResizing.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mibrunin Michael Bruning
            timaccorsair Alexandre Colucci
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes