Experiment: Try removing QWebEngineView from QTabWidget to fix flickering on mac.

There seems to be a bug mentioned here
(https://bugreports.qt.io/browse/QTBUG-76927) that is probably related.

Change-Id: Ida0a798d7703f32d22d26d2426c801c766b5f8ba