android/android-emu/android/skin/qt/extended-pages/location-page.cpp
@@ -134,16 +134,16 @@ LocationPage::LocationPage(QWidget *parent) :
 
     if (useLocationV2) {
         // Hide the old tab on the Location page
-        mUi->locationTabs->removeTab(3);
         // Hide the V2 widgets that are not functional yet
-        mUi->locationTabs->removeTab(2); // "Settings"
+        mUi->locationTabs->removeWidget(mUi->locationTabs->widget(2));
+        mUi->locationTabs->removeWidget(mUi->locationTabs->widget(3));
         mUi->loc_pointSortBox->hide();   // "Sort by ..."
     } else {
-        mUi->locationTabs->setTabText(3, ""); // "V1"
+        mUi->locationTabs->hide(); // "V1"
         // Hide the new tabs on the Location page
-        mUi->locationTabs->removeTab(2); // "Settings"
-        mUi->locationTabs->removeTab(1); // "Routes"
-        mUi->locationTabs->removeTab(0); // "Single points"
+        mUi->locationTabs->removeWidget(mUi->locationTabs->widget(2)); // "Settings"
+        mUi->locationTabs->removeWidget(mUi->locationTabs->widget(1)); // "Routes"
+        mUi->locationTabs->removeWidget(mUi->locationTabs->widget(0)); // "Single points"
     }
 
     if (useLocationV2) {
